Package: R.rsp
==============

Version: 0.12.1 [2013-12-14]
o BUG FIX: compileRsp() did not acknowledge argument 'postprocess'.


Version: 0.12.0 [2013-12-13]
o Now rfile() tries to rename the generated output file, iff its
  filename can be renamed using variable substitutions.  For instance,
  rfile('${foo}.txt.rsp') will try to rename output file '${foo}.txt'
  to 'SampleA.txt', if variable 'foo' is set to say 'SampleA' (either
  globally or by the RSP document).  If the variable is not set, the
  output file will remain '${foo}.txt'.  Requires R.utils (>= 1.28.6).
o BUG FIX: compileRsp(..., postprocess=TRUE) would throw 'Error in
  UseMethod("process"): no applicable method for 'process' applied to
  an object of class "character"'.  Added system test for compileRsp().


Version: 0.11.0 [2013-12-12]
o SIMPLIFICATION: Now the registered 'rsp::rsp' engine postprocesses
  the RSP document by default.  This means that RSP-embedded Markdown
  vignettes will be turned into HTML documents just as RSP-embedded
  LaTeX vignettes will become PDF documents.  It also means that such
  engines will no longer rely on the R 'tools' package to compile
  TeX output into PDFs.


Version: 0.10.3 [2013-12-06]
o CLEANUP: Dropped obsolete autoload():s.


Version: 0.10.2 [2013-11-23]
o BUG FIX: rsource() would not evaluate in the current environment.
  Added a package system test for this.


Version: 0.10.1 [2013-11-18]
o Added a small LoremIpsum.tex.rsp example vignette that is also
  useful as a stub for others to build upon.


Version: 0.10.0 [2013-11-03]
o Now "child" RSP documents imported into a "parent" RSP document
  via <%@import ...%>, sees all meta data of the parent, and any
  meta data set by the child document are also set in the parent
  one.  Updated main vignette to mention this.  Added a system tests.
o BUG FIX: setMetadata(..., metadata=list()) would give an error.


Version: 0.9.30 [2013-11-03]
o CLEANUP: Now the 'md.rsp+knitr:pandoc' vignette engine suppresses